Fixing spacing and alignment with more than one additional policy in the document

--- a/src/components/views/PolicyPage/PolicyPage/OthersInDocument/OthersInDocument.module.scss
+++ b/src/components/views/PolicyPage/PolicyPage/OthersInDocument/OthersInDocument.module.scss
@@ -17,6 +17,11 @@
   .others {
     display: flex;
     flex-direction: column;
-    // justify-content: space-between;
+    align-items: stretch;
+
+    > a {
+      margin-right: 0;
+      margin-bottom: 10px;
+    }
   }
 }
